# count-osm

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: README.md  sao-tome-and-principe-20221213.osm.pbf
benchmark/: CMakeLists.txt  phony_benchmark.cpp
conan/: CMakeLists.txt  conanfile.txt
doc/: OSM-links.md  OSM-pbf.md  PBF-wire-format.md
include/count-osm/: count-osm.h
src/: allocator.h  branch_hints.h  defer.h  forward.h  lock_guard.h  main.cpp  move.h  mutex.h  numbers.h  osm_pbf.h  protobuf.h  span.h  status.h  thread.h  traits.h
test/integration/: CMakeLists.txt  phony_integration_test.cpp
test/unit/: CMakeLists.txt  cosm_tests.pch.h  numbers_tests.cpp  phony_unit_test.cpp
